fixed nav bar, added footer, fixed spacing on user home screen

--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -8,14 +8,21 @@ body.bkgd-image {
   box-sizing: border-box;
 }
 
+h1 {
+  font-family: "fredoka one", sans-serif;
+  font-weight: 200;
+}
+
 body {
   font-size: 16px;
   font-weight: normal;
   font-family: "Poppins", arial, sans-serif;
 }
 
-.container {
+div.container {
+  display: block;
   padding-top: 75px;
+  padding-bottom: 175px;
 }
 
 .form-control {
@@ -42,12 +49,11 @@ body {
 
 }
 
-.titles {
-  text-transform: capitalize;
-}
-
 .center {
   text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+
 }
 
 .wrapper {
@@ -72,6 +78,7 @@ input::placeholder {
 }
 
 div.outer-div {
+  display: block;
   width: auto;
 }
 
@@ -82,7 +89,7 @@ div.outer-div {
   text-align: center;
 }
 
-a.created-restaurant {
+a {
   text-decoration: none;
 }
 
@@ -95,52 +102,53 @@ a.created-restaurant {
 
 
 /* ///////// NAV BAR /////////*/
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+div.nav {
   overflow: hidden;
   background-color: #f2f2f2;
-  top: 0;
-  width: 100%;
   border: 1px solid #e7e7e7;
   position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+
 }
 
-li {
-  float: left;
-}
-
-li a {
+a {
   display: block;
   color: black;
   text-align: center;
   padding: 10px;
   text-decoration: none;
   font-size: 16px;
+  float: left;
+
 }
 
-li a:hover {
+a:hover {
   background-color: white;
 }
 
 p.welcome-user {
-  padding-left: 15px;
+  padding-right: 15px;
   text-transform: capitalize;
   font-style: italic;
   font-weight: bold;
+  float: right;
 }
 
 /* /////////  FOOTER ///////// */
 
-footer {
-  position: absolute;
+.footer {
+  position: fixed;
+  left: 0;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 40px;
   background-color: #E3E3E3;
   color: #595959;
   text-align: center;
+  margin-top: 50px;
+  overflow: hidden;
 }
 
 /* ///////STYLING FLASH MESSAGES ///////*/
@@ -159,17 +167,13 @@ footer {
 /*phones, 600px and down*/
 @media only screen and (max-width: 600px){
 
-  .container {
-    padding-top: 80px;
-  }
-
   [class*="col-"] {
     width: 100%;
 }
 
 /* INDEX */
 
-.wrapper {
+div#index-page >img.wrapper {
   padding: 10px;
 
 }
@@ -196,21 +200,61 @@ p.requirements {
 }
 
 /* USER SHOW */
+#user-home {
+  margin-top: 80px;
+  padding-right: 5%;
+  padding-left: 5%;
+  padding-bottom: 50px;
+}
 
-div#home-view a.wrapper {
-  width: 75%;
+.section {
+  display: block;
+  padding-left: 12%;
+  padding-right: 12%;
+  margin-bottom: 100px;
+}
+
+.breaking-display-block{
+  display: block;
+  margin-bottom: 50px;
+}
+
+a.wrapper {
+  display:block;
+  padding
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+}
+
+h1.home-title {
+  text-transform: capitalize;
   text-align: center;
-  justify-content: center;
-  margin: 10px;
-
 
 }
 
-div#user-home.outer-div{
+#created-title{
+  text-align: center;
+  padding-top: 20px;
+  margin-top: 20px;
+  z-index: 1;
+  border-bottom: 1px solid black;
 
+}
+#bookmarked-title {
+text-align: center;
+padding-top: 20px;
+margin-top: 20px;
+line-height: 3em;
+vertical-align: text-bottom;
+z-index: 1;
+border-bottom: 1px solid black;
 }
 
 }
+
+
+
 
 /* RESPONSIVE FOR SMALL DEVICE */
 /*tablets and large phones */
